<resources>
    <string name="app_name">SimpleChat</string>

    //Login Activity
    <string name="hint_email">UserName</string>
    <string name="hint_pass">Password</string>
    <string name="hinh_first_name">FirstName</string>
    <string name="text_login">Access</string>
    <string name="text_forgot_password">Forgot Password? </string>
    <string name="text_recover"><u>Recover it</u></string>
    <string name="text_register">Register</string>
    <string name="text_not_input_username_pass">Please input usename and password!</string>

    //SignUp Activity
    <string name="text_create_accout">Create Account</string>
    <string name="text_not_account"> Do not have an account? </string>
    <string name="text_a_member"> Are you already a member? </string>
    <string name="text_sign_up"><u>Sign-Up</u></string>
    <string name="text_sign_in"><u>Sign-In</u></string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_confirm_pass">Confirm password</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_search">Search</string>
    <string name="text_please_inpur_all_info">Please input all info!</string>
    <string name="text_success_register">Register success!</string>
    <string name="text_error_register">Register error. Please check again!</string>
    <string name="text_fail_register">Register fail. Please check again!</string>
    <string name="password_not_confirm">"Password is not confirm!"</string>

    //ChatTalks Activity
    <string name="textview_text_chat_name">Your Friend</string>
    <string name="edittext_input_message">Input your messsage</string>
    <string name="popupcopy">Copy</string>
    <string name="popupshare">Share</string>
    <string name="popupdelete">Delete</string>
    <string name="have_not_input_message">"You have't input message"</string>

    //MainActivity
    <string name="title_friend_fragment">Friends</string>
    <string name="title_news_fragment">News</string>
    <string name="title_chat_fragment">Chat</string>
    <string name="title_more_fragment">More</string>
    <string name="text_click_back_again_to_exit">Please click BACK again to exit</string>


    //SharingMessage Activity
    <string name="title_sharing_message">Sharing</string>
    <string name="button_sharing_message">Sharing</string>
    <string name="text_message_send">message send...</string>
    <string name="hind_text_view_title">Send as message to</string>

    //NetWork Activity
    <string name="capture">No Internet Connection</string>
    <string name="description">Your phone is currently not connected to the internet. Please set up a connection!</string>
    <string name="button_try_again"><u>Try Again!</u></string>
    <string name="no_connection">"No Internet. Please Try again!"</string>

    //Comment Activity
    <string name="hint_edt_comment">Input your comment</string>
    <string name="title_comment_activity">Comment</string>
    <string name="text_like">like and</string>
    <string name="text_comment">comment.</string>
    <string name="have_not_input_comment">You have not input your comment</string>

    //Fragment
    <string name="title_tab_friend">Friends</string>
    <string name="title_tab_chat">Chat</string>
    <string name="title_tab_more">More</string>
    <string name="title_tab_news">News</string>
    <string name="title_tab_add_news">Create News</string>
    <string name="title_me">Me</string>
    <string name="title_friend">Friends</string>
    <string name="str_logout">Logout</string>
    <string name="str_update_profile">Update profile</string>
    <string name="str_language">Language</string>
    <string name="str_about">About</string>
    <string name="str_not_have_room">You not have room chat</string>
    <string name="empty" translatable="false" />
    <string name="no_message">No messages yet</string>

    //AddNews Fragment
    <string name="edt_description">Say something...</string>
    <string name="str_profile">Profile</string>
    <string name="title_activity_news_fragment">NewsFragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="str_choose_image">Choose image</string>

    //More Fragment
    <string name="confirm_logout">Are you sure you want to Logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="update_success">Update success</string>

    //Dialog
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_edit_profile">Edit profile</string>
    <string name="dialog_chat">Chat</string>
    <string name="dialog_call_audio">Call audio</string>
    <string name="dialog_call_video">Call video</string>

    //Menu ChatTalkActivity
    <string name="menu_member">Member</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>

    //AddGroupChat Activity
    <string name="title_new_group">New group</string>
    <string name="btn_create_group">Create</string>
    <string name="hint_groupname">"Group's Name"</string>
    <string name="text_insert_group_name">"Insert group's name"</string>
    <string name="pick_someone">Pick someone!</string>
    <string name="failed">Failed, try again!</string>

    //Choose Language Activity
    <string name="lang_en">English</string>
    <string name="lang_vi">Vietnamese</string>

    //Call Activity
    <string name="text_incoming_call_audio">Incoming call audio from </string>
    <string name="text_incoming_call_video">Incoming call video from </string>
    <string name="text_call_audio_to">Calling audio to </string>
    <string name="text_call_video_to">Calling video to</string>
    <string name="text_call_end">Call ended!</string>
    <string name="turn_off_camera"> was turn off camera!</string>

    //Permission
    <string name="text_accept_permission">You need to accept permission to continue!  </string>

    //About Activity
    <string name="about_version">Current version: 1.0.0</string>
    <string name="about_product">Product of BAP\'s interns, 2018</string>
    <string name="about_contact">Contact us: greenchatting@gmail.com</string>

    //SearchGroupChat Activity
    <string name="hint_search_group">Search group, friend ...</string>

    //CallBusy Activity
    <string name="busy"> is having another conversation</string>
    <string name="not_online"> is not online!</string>

    //AddNews Acivity
    <string name="say_something">Just say something....</string>
    <string name="pick_picture">Please choose a picture!</string>
    <string name="share_success">Share News Success!</string>

    //Update profile activity
    <string name="str_btn_update">Update</string>

    //Confirm Dialog
    <string name="title_delete_message">Delete a message?</string>
    <string name="description_delete_message">You can not undo after deleting a copy of the messages</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="result_delete">Deleted!</string>
    <string name="copy_message">Text has been copied!</string>

</resources>
