<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/_24sdp"
    android:paddingTop="@dimen/_24sdp"
    android:orientation="horizontal"
    android:weightSum="9"
    >

    <TextView
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/popUpCopy"
        android:layout_marginBottom="@dimen/_24sdp"
        android:drawableTop="@drawable/popupcopy"
        android:text="@string/popupcopy"
        android:textAlignment="center"
        />

    <TextView
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/popUpShare"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintLeft_toRightOf="@+id/popUpCopy"
        android:drawableTop="@drawable/popupshare"
        android:text="@string/popupshare"
        android:textAlignment="center"/>

    <TextView
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/popUpDelete"
        android:layout_marginBottom="@dimen/_24sdp"
        android:drawableTop="@drawable/popupdelete"
        android:text="@string/popupdelete"
        android:textAlignment="center"/>
</LinearLayout>

