<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">

    <ImageView
        android:id="@+id/imgv_logo"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/design_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgv_logo"
        >

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:hint="@string/hint_email"
            android:textSize="@dimen/_20ssp"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/design_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/design_email">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:hint="@string/hint_pass"
            android:textSize="@dimen/_20ssp"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/design_password"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="@dimen/_20ssp"
        android:background="@drawable/shape_button_login"
        />

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:hint="@string/text_not_account"
        android:textSize="@dimen/_15ssp"
        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_sign_up"
        android:layout_toRightOf="@+id/txt_sign_up"
        android:background="@android:color/transparent"
        android:text="@string/text_sign_up"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"

        />

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:hint="@string/text_forgot_password"
        android:textSize="@dimen/_15ssp"
        />

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txt_forgot_pass"
        android:layout_alignBaseline="@+id/txt_forgot_pass"
        android:background="@android:color/transparent"
        android:text="@string/text_recover"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"

        />
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/indicatorView"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        style="@style/AVLoadingIndicatorView"
        android:visibility="invisible"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/yellow"
        android:layout_below="@+id/imgv_logo"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>