<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NetworkActivity"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/nowificonnected"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@android:color/transparent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:text="@string/capture"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/description"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_try_again"
        android:padding="@dimen/_5sdp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorGreen"
        android:textStyle="italic"
        />

</LinearLayout>