<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="jp.bap.traning.simplechat.ui.UpdateProfileActivity">

    <jp.bap.traning.simplechat.widget.CustomToolbar_
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_20sdp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar">

        <RelativeLayout
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mAvatar"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_avatar_default" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_camera" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/mEdtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:hint="@string/hint_firstname"
            android:padding="@dimen/_5sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/brightGrey" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/mEdtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_lastname"
            android:padding="@dimen/_5sdp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mBtnUpdate"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/shape_button_login"
            android:text="@string/str_btn_update"
            android:textColor="@color/white" />

    </LinearLayout>
    <include layout="@layout/activity_progressbar"></include>
</android.support.constraint.ConstraintLayout>
